--- a/loveu.html
+++ b/loveu.html
@@ -152,7 +152,7 @@
 
     <!-- Background Music -->
     <audio id="background-audio" loop>
-        <source src="/No. 1 Party Anthem (1).mp3" type="audio/mp3"> <!-- Replace with your audio file -->
+        <source src="No. 1 Party Anthem (1).mp3"> <!-- Replace with your audio file -->
         Your browser does not support the audio tag.
     </audio>
 
