--- a/loveu.html
+++ b/loveu.html
@@ -108,7 +108,7 @@
 
     <!-- Background Video -->
     <video id="video-background" autoplay muted loop>
-        <source src="/112199-693798268_medium (1).mp4" type="video/mp4"> <!-- Replace with your video URL -->
+        <source src="112199-693798268_medium (1).mp4" type="video/mp4"> <!-- Replace with your video URL -->
         Your browser does not support the video tag.
     </video>
 
